--- a/CodexNaturalis/pom.xml
+++ b/CodexNaturalis/pom.xml
@@ -18,6 +18,11 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-autoconfigure</artifactId>
+          <version>3.1.5</version>
+      </dependency>
   </dependencies>
   <build>
     <pluginManagement>
