--- a/CodexNaturalis/pom.xml
+++ b/CodexNaturalis/pom.xml
@@ -23,6 +23,12 @@
           <artifactId>spring-boot-autoconfigure</artifactId>
           <version>3.1.5</version>
       </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter</artifactId>
+          <version>RELEASE</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
   <build>
     <pluginManagement>
