--- a/CodexNaturalis/pom.xml
+++ b/CodexNaturalis/pom.xml
@@ -18,6 +18,12 @@
       <version>2.10.1</version>
     </dependency>
     <dependency>
+          <groupId>org.mockito</groupId>
+         <artifactId>mockito-core</artifactId>
+         <version>3.12.4</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
