--- a/CodexNaturalis/pom.xml
+++ b/CodexNaturalis/pom.xml
@@ -18,6 +18,12 @@
       <version>2.10.1</version>
     </dependency>
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.11.0-M1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
           <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>3.12.4</version>
